# COL781

./: a.out  aliasing.cpp  box_plot.ipynb  fft.ipynb  makefile  raster  rasterization.cpp  starter_code  starter_code.cpp  triangle_raster.cpp  triangle_raster.h
a1-main/: CMakeLists.txt  README.md
a1-main/examples/: e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  e6.cpp  e7.cpp
a1-main/src/: api2.inc  sw.cpp  sw.hpp
a1-main/util/: util.hpp  window.cpp  window.hpp
a2-main/: CMakeLists.txt
a2-main/src/: example.cpp  sphere.cpp  square_grid.cpp
a2-main/src/util/: halfedge.cpp  halfedge.hpp  mesh.cpp  mesh.hpp  obj_parse.cpp  sphere_grid.cpp  square_grid.cpp  std_mesh.hpp  test_mesh.hpp  unit_square_test.cpp  util.hpp
a3-main/: CMakeLists.txt  README.md
a3-main/examples/: example.cpp  example1.1.cpp  example1.2.cpp  example1.3.cpp  example1.4.cpp  example2.1.cpp  example2.2.cpp  example2.3.cpp  example2.4.cpp  example2.5.cpp  example2.6.cpp
a3-main/src/: Basic_Ray_Tracer.cpp  Basic_Ray_Tracer.hpp  Camera.cpp  Lighting.cpp  Material.cpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Sphere.cpp  Sphere.hpp
a4-main/: CMakeLists.txt
a4-main/a4-main/: CMakeLists.txt
a4-main/src/: animation.cpp  bone_animation.cpp  bone_animation2.cpp  bones.cpp  cloth.cpp  collision.cpp  self_collision.cpp  sw.hpp
a4-main/util/: cloth_helper.cpp  cloth_helper.hpp  math.cpp  skeleton.cpp  skeleton.hpp  uniform_grid.cpp
totem-43.0/.pc/: applied-patches
totem-43.0/debian/: changelog  control  control.in  libtotem-dev.install  libtotem0.install  rules  totem.install  (+2 more)
xscreensaver-6.06+dfsg1/: Makefile  Makefile.in  config.h  config.status  configure
(+1421 files in other folders)
